# pdda

./: CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
pdda/: helpers.py  propagators.py  rta.py
tests/: test_helpers.py  test_rta.py
