[project]
name = "pdda"
version = "0.3"
authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "Library for computing position dependent diffusivities from molecular dynamics simulations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"
dependencies = [
    "numba>=0.60,<0.66",
    "numpy>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdda"]

[tool.hatch.build.targets.sdist]
include = [
    "pdda",
    "README.md",
    "LICENSE"
]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
hatch = "*"
pytest = "*"
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
pdda = { path = ".", editable = true }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.build.config]
ignore-pypi-mapping = false
