[project]
name = "pdda"
version = "0.5"
authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "Library for computing position dependent diffusivities from molecular dynamics simulations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"
dependencies = [
    "numba>=0.60,<0.66",
    "numpy>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdda"]

[tool.hatch.build.targets.sdist]
include = [
    "pdda",
    "README.md",
    "LICENSE"
]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
hatch = ">=1.17.0,<2"
pytest = ">=9.0.3,<10"

[tool.pixi.tasks]
build-conda = { cmd = "pixi publish" }
build-wheel = { cmd = "hatch build" }
stage-artifacts = { cmd = """
rm -rf out
mkdir -p out/conda/noarch out/pypi
cp *.conda out/conda/noarch/
cp dist/*.whl out/pypi/
cp dist/*.tar.gz out/pypi/
""" }
build-artifacts = { depends-on = ["build-conda", "build-wheel", "stage-artifacts"] }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "<=0.5,<0.6"

[tool.pixi.package.build.config]
ignore-pypi-mapping = false
